--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,4 @@
 {
   "files": [],
-  "references": [
-    { "path": "./app" },
-    { "path": "./db" },
-    { "path": "./edge" },
-    { "path": "./scripts" },
-    { "path": "./server" }
-  ]
+  "references": [{ "path": "./app" }, { "path": "./scripts" }]
 }
